# research

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
.codegraph/: codegraph.json
docs/plantree/: README.md
docs/plantree/plans/tech-debt/: roadmap.md  status.md
docs/superpowers/plans/: 2026-05-09-microkernel-refactor.md
ppt-master-analysis/: 00-EXECUTIVE-SUMMARY.md  01-ARCHITECTURE-DEEP-DIVE.md  02-SVG-TO-PPTX-ENGINE.md  03-PROMPT-ENGINEERING.md  04-IMAGE-SYSTEM.md  05-RUST-REWRITE-GUIDE.md
src/: AGENTS.md  config.rs  graph_utils.rs  lib.rs  local_search.rs  main.rs  mcp.rs  models.rs  rendering.rs  storage.rs  types.rs  utils.rs  viewer.rs
src/lab/: graph.rs  mod.rs  render.rs  search_ops.rs  storage_ops.rs
src/providers/: code.rs  deterministic.rs  exa.rs  hybrid.rs  kimi.rs  minimax.rs  mod.rs  zhipu.rs
