[package]
name = "research"
version = "0.1.0"
edition = "2024"
description = "A standalone Rust CLI for persistent research workspace with a microkernel architecture"
license = "MIT"
readme = "README.md"
repository = "https://github.com/trtyr/research"
homepage = "https://github.com/trtyr/research"
documentation = "https://docs.rs/research"
keywords = ["research", "cli", "knowledge-management", "search", "graph"]
categories = ["command-line-utilities", "knowledge-management", "search"]

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.51", features = ["derive"] }
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
rand = "0.9"
lopdf = "0.35"
ulid = "1.2.1"

[dev-dependencies]
tempfile = "3.23.0"
